overflow fixed on phone res

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body {
 
 .projects{
   width: 100%;
+  overflow-x: hidden;
 }
 
 /* Card Styling */
